samples/_failures_safe/1761242749_de8940_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e06a215f.c: In function ‘main’:
./samples/SAFE/__tmp_e06a215f.c:162:16: error: missing terminating " character
  162 |         printf("Invalid starting node
      |                ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e06a215f.c:162:9: error: expected expression at end of input
  162 |         printf("Invalid starting node
      |         ^~~~~~
./samples/SAFE/__tmp_e06a215f.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e06a215f.c:162:9: error: expected declaration or statement at end of input
